Several problems found by cppcheck
This issue was migrated from bug 4175 in our old bug tracker.
Original bug information:
Reporter: Eric Sesterhenn
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: 1.2.3
Attachments:
wireshark_1.diff: since we free fname with g_free, we should use g_strdup to allocate it
wireshark_3.diff: cfmt->cfield and cfmt get leaked in the error path
wireshark_4.diff: fp gets leaked in error path