From Eric Sesterhenn via bug 4175: Fixed cfmt->cfield and cfmt leakage in the error path.

svn path=/trunk/; revision=30756